# serializer version: 1
# name: TestAttachSubtractions.test_multiple
  list([
    dict({
      'id': 'sub_1',
      'subtractions': list([
        dict({
          'id': 'bf1b993c',
          'name': 'foo',
        }),
        dict({
          'id': 'fb085f7f',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_2',
      'subtractions': list([
        dict({
          'id': 'bf1b993c',
          'name': 'foo',
        }),
      ]),
    }),
    dict({
      'id': 'sub_3',
      'subtractions': list([
      ]),
    }),
  ])
# ---
# name: TestAttachSubtractions.test_single
  dict({
    'id': 'sub_1',
    'subtractions': list([
      dict({
        'id': 'bf1b993c',
        'name': 'foo',
      }),
      dict({
        'id': 'fb085f7f',
        'name': 'foo',
      }),
    ]),
  })
# ---
